# Testmaster

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt
apps/geospanner/: CMakeLists.txt  delta_greedy_spanner.cpp  generate_clustered_instances.py  generate_instances.py  path_greedy_spanner.cpp  yao_parametrized_pruning.cpp  yao_spanner.cpp  yao_spanner_pruning.cpp
include/geospanner/: experiment_utils.h  randomGeoInstances.h
include/utils/: FEGraphMLParser.h
testmaster/: example_input.json  testmaster.py
testmaster/dummyprograms/: error.py  exp_list.py  fibonacci.py  good_night.py  parseable_output.py  parseable_output_mem.py  slow_decrement.py  slow_increment.py
