
add_executable(yao_spanner yao_spanner.cpp)
target_include_directories(yao_spanner PRIVATE ${CMAKE_SOURCE_DIR}/include/geospanner)
target_link_libraries(yao_spanner OGDF)

add_executable(yao_parametrized_pruning yao_parametrized_pruning.cpp)
target_include_directories(yao_parametrized_pruning PRIVATE ${CMAKE_SOURCE_DIR}/include/geospanner)
target_link_libraries(yao_parametrized_pruning OGDF)

add_executable(yao_spanner_pruning yao_spanner_pruning.cpp)
target_include_directories(yao_spanner_pruning PRIVATE ${CMAKE_SOURCE_DIR}/include/geospanner)
target_link_libraries(yao_spanner_pruning OGDF)

add_executable(path_greedy_spanner path_greedy_spanner.cpp)
target_include_directories(path_greedy_spanner PRIVATE ${CMAKE_SOURCE_DIR}/include/geospanner)
target_link_libraries(path_greedy_spanner OGDF)

add_executable(delta_greedy_spanner delta_greedy_spanner.cpp)
target_include_directories(delta_greedy_spanner PRIVATE ${CMAKE_SOURCE_DIR}/include/geospanner)
target_link_libraries(delta_greedy_spanner OGDF)
